# duckdb_migration

./: .gitignore  README.md  pyproject.toml  sql_database_pipeline.py
.dlt/: config.toml
