[project]
name = "duckdb-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,sql-database]>=1.14.1",
    "enlighten>=1.14.1",
    "mssql-python>=0.8.1",
    "pymssql>=2.3.7",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
]
